OpenAPI contract definition updated
